# TESSERACT_Simulation_Analysis

./: .delete.txt.swp  README.md  pyproject.toml  requirements.txt  tesssa_demo.ipynb
SimRunner/: SimTester.py  job_config.py  launch_jobs.py  lil_readme.md  run_in_container.sh  submit_job.sh
cached_data/: materials_data.csv  materials_data_2.csv  rock_data.csv
data/: materials_data.csv  rock_data.csv
docs/: METHODOLOGY.md
examples/templates/: group_filtering_slurm.sh
filtering/cpp/: CMakeLists.txt  VD_group_filtering.cc  VD_single_filtering.cc
filtering/externals_sim/: Concrete_GammasFilter_13950842_0.out  Concrete_GammasFilter_13950842_1.out  Concrete_GammasFilter_13950842_2.out  Rock_GammasFilter_13950845_0.out  Rock_GammasFilter_13950845_1.out  Rock_GammasFilter_13950845_2.out  Rock_Neutrons_TotFilter.out  concrete_gammas_filtering.sh  rock_gammas_filtering.sh  rock_neutrons_filtering.sh
filtering/internals_sim/: CuFilter_13950849_0.out  CuFilter_13950849_1.out  CuFilter_13950849_2.out  PCuFilter_13950856_0.out  PCuFilter_13950856_1.out  PCuFilter_13950856_2.out  PEFilter_13950859_0.out  PEFilter_13950859_1.out  PEFilter_13950859_2.out  PEFilter_13950859_3.out  PEFilter_13950859_4.out  PbFilter_13950852_0.out  PbFilter_13950852_1.out  PbFilter_13950852_2.out  PbFilter_13950852_3.out  SSiFilter_13950864_0.out  SSiFilter_13950864_1.out  (+29 more)
processing/: tesssa_demo.ipynb
tesssa/: VD_single_processing.C  delete.txt  get_h5_files.py  root_to_h5.py  setup.py  shield_sim_processing.py  tesssa_demo.ipynb  utils.py
test/: get_geoTable.cc  get_geoTable.ipynb
(+1975 files in other folders)
