[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesssa"
version = "0.1.0"
description = "TESSSA framework for TESSERACT simulations"
authors = [{name="Leslie Juigné", email="leslie.juigne@physik.uzh.ch"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "uproot",  # for ROOT files in Python
]

[tool.setuptools.packages.find]
where = ["tesssa/src"]
